Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/diags/DiagnosticRewriterTest.out
DiagnosticRewriterTest.java:12:15: compiler.err.prob.found.req: (compiler.misc.possible.loss.of.precision: long, int)
- compiler.note.compressed.diags
1 error
